--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">20220426-YesidHuertas-NYCSchools</string>
+    <string name="school_dnn">DBN6363</string>
+    <string name="school_student_count">597</string>
+    <string name="students_count_lbl">Students Count</string>
+    <string name="school_name">Milton High</string>
+    <string name="school_name_lbl">Name</string>
+    <string name="school_website">http://miltonschool.com</string>
+    <string name="url_lbl">Url</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
